...
            android:layout_centerVertical="true"/>

        <!--Título-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ORDENAÇÃO"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_centerInParent="true"/>

...
